# tic-tac-toe-plus-plus

./: .gitignore  Cargo.toml  README.md  TODO.md  project.godot  tictactoe-plusplus.csproj  tictactoe-plusplus.sln
assets/: board-cell-24.png.import  grid_cells.png.import  tic-tac-toe-board-o.png.import  tic-tac-toe-board-x.png.import  tic-tac-toe-board-xo.png.import
client/: client-renet.gdextension  client-renet.gdextension.uid  export_presets.cfg  icon.svg.import  project.godot  ttt_eos_login.gd  ttt_eos_login.gd.uid
client-renet/: Cargo.toml
client-renet/src/: lib.rs  player.rs  renetclient.rs  tile.rs
client/assets/: background-generic-thick.png.import  background-generic.png.import  background.png.import  board-border-frame.png.import  board-xo.png.import  drag-indicator.png.import  home-icon.png.import  indicator.png.import  loading.png.import  (+5 more)
resources/: board_resource_default.tres  board_settings_default.tres  cell_frame_24_sprite_frame.tres  grid_cell_frames.tres  grid_cell_xo.tres  xo_sprite_frame.tres
rvouspoint/: Cargo.toml  Dockerfile  compose.yaml
rvouspoint/src/: main.rs
scenes/: board.tscn  board_cell.tscn  board_settings.tscn  world.tscn
scripts/: Board.cs  Board.cs.uid  BoardCell.cs  BoardCell.cs.uid  BoardResource.cs  BoardResource.cs.uid  BoardSettings.cs  BoardSettings.cs.uid  board.gd  board_cell.gd  board_cell.gd.uid  board_manager.gd  board_resource.gd  board_resource.gd.uid  board_settings.gd
server/: Cargo.toml  game.js  index.js  package-lock.json  package.json
server/src/: game.rs  main.rs
store/: Cargo.toml
(+132 files in other folders)
