[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-macros = "0.5.0"
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive", "rc"]}
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
