[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
store = { path = "../store" }
env_logger = "0.11.9"
log = "0.4.29"
renet = "2.0.0"
renet_netcode = "2.0.0"
serde = { version = "1.0.228", features = ["derive", "rc"]}
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
